--- a/package.json
+++ b/package.json
@@ -37,23 +37,23 @@
   },
   "homepage": "http://www.angular-meteor.com",
   "peerDependencies": {
-    "@types/meteor": "^1.4.6",
-    "rxjs": "^5.4.3 || ^6.0.0"
+    "@types/meteor": "^2.7.1",
+    "rxjs": "^7.5.6"
   },
   "devDependencies": {
-    "@types/chai": "4.0.4",
-    "@types/meteor": "1.4.14",
-    "@types/mocha": "2.2.43",
-    "@types/underscore": "1.8.3",
-    "conventional-changelog": "1.1.0",
-    "conventional-changelog-cli": "1.2.0",
-    "jsdoc-to-markdown": "3.0.0",
-    "rollup": "0.49.3",
-    "rxjs": "6.0.0",
-    "rxjs-compat": "6.0.0",
-    "tslint": "5.7.0",
-    "typescript": "2.7.2",
-    "zone.js": "0.8.20"
+    "@types/chai": "^4.3.3",
+    "@types/meteor": "^2.7.1",
+    "@types/mocha": "^9.1.1",
+    "@types/underscore": "^1.11.4",
+    "conventional-changelog": "^3.1.25",
+    "conventional-changelog-cli": "^2.2.2",
+    "jsdoc-to-markdown": "^7.1.1",
+    "rollup": "^2.77.2",
+    "rxjs": "^7.5.6",
+    "rxjs-compat": "^6.6.7",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4",
+    "zone.js": "^0.11.7"
   },
   "greenkeeper": {
     "ignore": [
