--- a/package.json
+++ b/package.json
@@ -38,22 +38,23 @@
   "homepage": "http://www.angular-meteor.com",
   "peerDependencies": {
     "@types/meteor": "^1.4.6",
-    "rxjs": "^5.4.3 || ^6.0.0"
+    "rxjs": "^7.5.6"
   },
   "devDependencies": {
     "@types/chai": "4.0.4",
     "@types/meteor": "1.4.14",
     "@types/mocha": "2.2.43",
+    "@types/node": "^18.6.4",
     "@types/underscore": "1.8.3",
     "conventional-changelog": "1.1.0",
     "conventional-changelog-cli": "1.2.0",
     "jsdoc-to-markdown": "3.0.0",
     "rollup": "0.49.3",
-    "rxjs": "6.0.0",
-    "rxjs-compat": "6.0.0",
+    "rxjs": "^7.5.6",
+    "rxjs-compat": "^6.6.7",
     "tslint": "5.7.0",
-    "typescript": "2.7.2",
-    "zone.js": "0.8.20"
+    "typescript": "^4.7.4",
+    "zone.js": "^0.11.7"
   },
   "greenkeeper": {
     "ignore": [
